--- a/bin/install
+++ b/bin/install
@@ -6,12 +6,15 @@
 ## -----------------------
 ## Customization functions
 
-# kc_asdf_main() {
-#   local ns="$1"
-#   shift
-#
-#   return 0
-# }
+_kc_asdf_custom_source_build() {
+  local version="$1" output="$2"
+  local concurrency="$3"
+
+  kc_asdf_commands "go"
+  go build \
+    -p "$concurrency" -o "$output/bin/$KC_ASDF_APP_NAME" \
+    -ldflags "-X version.Version=0.0.0-$version version.GitCommit=$version" ./cmd/gomplate
+}
 
 ## -----------------------
 
